--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         </div>
     </div>
     <div class="footer">
-        <h1>My Current Skills</h1>
-        <p>The Foolowing Are My Current Skills as of December 2021.</p>
-        <div class="skills">
+        <!-- <h1>My Current Skills</h1>
+        <p>The Foolowing Are My Current Skills as of December 2021.</p> -->
+        <!-- <div class="skills">
             <div class="mainskill">
                 <div class="skillimg">
                     <img src="./html.jpg" alt="" srcset="">
@@ -167,8 +167,8 @@
                                         </div>
                                          </div>
 
-        </div>
-        <div class="numbers">
+        </div> -->
+        <!-- <div class="numbers">
             <div class="number">
                 <h4>Projects Completed</h4>
                 <h3 class="num1">00</h3>
@@ -185,7 +185,7 @@
                 <h4>Courses UnCompleted</h4>
                 <h3 class="num4">00</h3>
             </div>
-        </div>
+        </div> -->
 
 
 
@@ -229,23 +229,23 @@
         </div> -->
         
         <div class="footers">
-        <div class="glass">
-        </div>
-        <div class="glass2">
+        <!-- <div class="glass">
+        </div> -->
+        <!-- <div class="glass2">
             <img src="./1.jpg" alt="" srcset="">
             <img src="./1.jpg" alt="" srcset="">
             <img src="./1.jpg" alt="" srcset="">
             <img src="./1.jpg" alt="" srcset="">
 
-        </div>
-        <div class="featured">
+        </div> -->
+        <!-- <div class="featured">
             <h3>Featured Projects:</h3>
-        </div>
-        <div class="mainPro">
+        </div> -->
+        <!-- <div class="mainPro">
             <button type="submit">VRMS</button>
             <button type="submit">HRMS</button>
             
-        </div>
+        </div> -->
           <div class="name">
             <h3>MUBARAK IBRAHIM</h3>
             <h2>© Copyright 2020-2021</h2>
